<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_course_add_new_semester"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/borderBackground"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewDialogTitle"
        android:text="@string/dialog_course_semester_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBackground"
        android:paddingTop="@dimen/spacing_10"
        android:paddingLeft="@dimen/spacing_10"
        android:paddingRight="@dimen/spacing_10">

        <TextView
            style="@style/TextViewDialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_course_semester_start_year" />

        <TextView
            style="@style/TextViewDialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_course_semester_end_year" />

        <TextView
            style="@style/TextViewDialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_course_semester_semester" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBackground"
        android:paddingLeft="@dimen/spacing_10"
        android:paddingRight="@dimen/spacing_10"
        android:paddingBottom="@dimen/spacing_10">

        <EditText
            android:id="@+id/et_dialog_course_semester_start_year"
            style="@style/EditTextDialog" />

        <EditText
            android:id="@+id/et_dialog_course_semester_end_year"
            style="@style/EditTextDialog" />

        <EditText
            android:id="@+id/et_dialog_course_semester_semester"
            style="@style/EditTextDialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2"
        android:background="@color/lightBackground">

        <Button
            android:id="@+id/btn_dialog_course_semester_cancel"
            style="@style/ButtonDialog"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_dialog_course_semester_ok"
            style="@style/ButtonDialog"
            android:text="@string/btn_ok" />
    </LinearLayout>
</LinearLayout>
