<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".experiment.ExperimentViewActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBackground"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:stretchColumns="1">
        <!-- 学期 -->
        <TableRow style="@style/TableRowAttribute">

            <TextView
                style="@style/TextViewAttribute"
                android:text="@string/experiment_edit_semester" />

            <TextView
                android:id="@+id/tv_experiment_view_semester"
                style="@style/TextViewValue" />
        </TableRow>
        <!-- 课程名称 -->
        <TableRow style="@style/TableRowAttribute">

            <TextView
                style="@style/TextViewAttribute"
                android:text="@string/experiment_edit_course" />

            <TextView
                android:id="@+id/tv_experiment_view_course"
                style="@style/TextViewValue" />
        </TableRow>
        <!-- 实验名称 -->
        <TableRow style="@style/TableRowAttribute">

            <TextView
                style="@style/TextViewAttribute"
                android:text="@string/experiment_edit_name" />

            <TextView
                android:id="@+id/tv_experiment_view_name"
                style="@style/TextViewValue" />
        </TableRow>
        <!-- 结束时间 -->
        <TableRow style="@style/TableRowAttribute">

            <TextView
                style="@style/TextViewAttribute"
                android:text="@string/experiment_edit_time" />

            <TextView
                android:id="@+id/tv_experiment_view_time"
                style="@style/TextViewValue" />
        </TableRow>
        <!-- 实验内容 -->
        <TextView
            style="@style/TextViewAttribute"
            android:text="@string/experiment_edit_content" />

        <TextView
            android:id="@+id/tv_experiment_view_content"
            style="@style/TextViewValue"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:paddingStart="5dp" />
    </TableLayout>
</ScrollView>